cabal-version:       2.4
name:                server
version:             0.1.0.0
author:              Brad Parker
maintainer:          hi@bradparker.com

executable server
  main-is:          Main.hs
  build-depends:    base ^>=4.12.0.0,
                    filepath,
                    http-types,
                    optparse-applicative,
                    wai,
                    wai-extra,
                    wai-middleware-static,
                    warp,
                    warp-tls
  default-language: Haskell2010
