cabal-version:       2.4
name:                force-https
version:             0.1.0.0
author:              Brad Parker
maintainer:          hi@bradparker.com

executable force-https
  main-is:          Main.hs
  build-depends:    base ^>=4.13.0.0,
                    bytestring,
                    optparse-applicative,
                    wai,
                    wai-extra,
                    warp
  default-language: Haskell2010
