cabal-version: 2.4
name: bradparker-com-builder
version: 0.1.0.0
license: BSD-3-Clause
build-type: Simple

executable builder
  main-is:
    Main.hs
  build-depends:
    base ^>=4.19.0.0,
    attoparsec,
    blaze-html,
    blaze-markup,
    bytestring,
    containers,
    directory,
    errors,
    feed,
    filepath,
    filepattern,
    lens,
    mtl,
    optparse-applicative,
    pandoc,
    pandoc-types,
    text,
    time,
    vector,
    yaml,
    zlib
  other-modules:
    Builder
    Data.Yaml.Extended
    Document
    Feed
    Frontmatter
    Home
    Html
    Markdown
    Page
    Post
    PostSummary
    Posts
    Tag
  default-language:
    Haskell2010
