cabal-version:       2.4
name:                server
version:             0.1.0.0
author:              Brad Parker
maintainer:          hi@bradparker.com

executable server
  hs-source-dirs:   .,
                    lib
  main-is:          Main.hs
  build-depends:    base ^>=4.16.0.0,
                    filepath,
                    http-types,
                    text,
                    wai,
                    wai-cli,
                    wai-extra,
                    wai-middleware-static,
  other-modules:    Site
                    Site.Redirect
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
